feat: add velocity proxy handling and automatic add of server
